# ComfyUI-AudioX

./: .gitignore  LICENSE  README.md  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
audiox/: __init__.py
audiox/data/: utils.py
audiox/inference/: generation.py  sampling.py
audiox/models/: MAF.py  adp.py  autoencoders.py  conditioners.py  diffusion.py  dit.py  factory.py  hyper_connections.py  mm_blocks.py  mm_embeddings.py  mm_transformer_layers.py  mmdit.py  temptransformer.py  transformer.py
audiox/models/synchformer/: __init__.py  features_utils.py  motionformer.py  synchformer.py  video_model_builder.py
examples/: AudioX_sample_workflow.json
